# galaxy-gpu

./: .gitignore  CMakeLists.txt  flake.nix  main.cpp  vector2.h
src/: main.cpp  main.cu  vector2.h
